--- a/index.html
+++ b/index.html
@@ -4,19 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Click Jogos</title>
-    <!-- Link to external CSS file -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<!-- Site Wrapper -->
 <div id="site-wrapper">
-    <!-- ==========================================================================
-       Header Section
-       ========================================================================== -->
-    <!-- Top Bar (UOL) -->
     <header class="top-bar">
         <div class="left-links">
-             <!-- UOL Logo -->
             <img src="images/logo-uol.gif" alt="UOL" title="UOL">
             <span>Assine 0800 703 3000</span>
             <span>SAC</span>
@@ -32,22 +25,18 @@
             <input type="text" placeholder="">
             <button>BUSCAR</button>
         </div>
-    </header> <!-- /.top-bar -->
+    </header>
 
-    <!-- Logo and Game Search Area -->
     <div class="logo-search-area">
         <div class="logo-section">
-            <!-- Click Jogos Logo -->
             <div class="logo">
                  <img src="images/logo.png" alt="Click Jogos Logo" style="display: block; max-width: 100%; height: auto;">
             </div>
         </div>
-        <!-- Game Counter -->
         <div class="counter">
-            <span class="tooltip-number">8.130</span> <!-- Tooltip showing number -->
-            <div class="plus-one-button">+1</div> <!-- "+1" button -->
+            <span class="tooltip-number">8.130</span>
+            <div class="plus-one-button">+1</div>
         </div>
-        <!-- Game Search Form -->
         <div class="game-search">
             <label for="game-search-input">BUSCAR JOGOS:</label>
             <div class="search-input-wrapper">
@@ -55,32 +44,26 @@
                 <button>buscar</button>
             </div>
         </div>
-    </div> <!-- /.logo-search-area -->
+    </div>
 
-    <!-- Main Navigation -->
     <nav class="main-nav">
         <ul>
-            <li><a href="#"><span class="icon home"></span></a></li> <!-- Separated Home -->
-            <li><a href="#"><span class="icon"></span>Top Jogos</a></li> <!-- Separated Top Jogos with standard icon -->
-            <li><a href="#"><span class="icon"></span>Ação e Aventura</a></li> <!-- Removed text icon -->
-            <li><a href="#"><span class="icon"></span>Carros</a></li> <!-- Removed text icon -->
-            <li><a href="#"><span class="icon"></span>Esportes</a></li> <!-- Removed text icon -->
-            <li><a href="#"><span class="icon"></span>Puzzle</a></li> <!-- Removed text icon -->
-            <li><a href="#"><span class="icon"></span>Tiro</a></li> <!-- Removed text icon -->
-            <li><a href="#"><span class="icon"></span>Jogos de Meninas</a></li> <!-- Removed text icon -->
-            <li><a href="#"><span class="icon"></span>Download de Jogos</a></li> <!-- Removed text icon -->
+            <li><a href="#"><span class="icon home"></span></a></li>
+            <li><a href="#"><span class="icon"></span>Top Jogos</a></li>
+            <li><a href="#"><span class="icon"></span>Ação e Aventura</a></li>
+            <li><a href="#"><span class="icon"></span>Carros</a></li>
+            <li><a href="#"><span class="icon"></span>Esportes</a></li>
+            <li><a href="#"><span class="icon"></span>Puzzle</a></li>
+            <li><a href="#"><span class="icon"></span>Tiro</a></li>
+            <li><a href="#"><span class="icon"></span>Jogos de Meninas</a></li>
+            <li><a href="#"><span class="icon"></span>Download de Jogos</a></li>
         </ul>
         <div class="favorites">
             <a href="#"><span class="icon-star">★</span> Meus Favoritos</a>
         </div>
-    </nav> <!-- /.main-nav -->
-    <!-- End Header Section -->
+    </nav>
 
-    <!-- ==========================================================================
-       Main Content Section (Sidebar + Content Area)
-       ========================================================================== -->
     <div class="main-content">
-        <!-- Sidebar (Categories) -->
         <aside class="sidebar">
             <ul>
                 <li><a href="#"><img src="images/icons/icon_8.png" alt="Icon" class="icon">Meninas</a></li>
@@ -99,13 +82,10 @@
                 <li><a href="#"><img src="images/icons/icon_6.png" alt="Icon" class="icon">Estratégia</a></li>
                 <li><a href="#"><img src="images/icons/icon_10.png" alt="Icon" class="icon">Plataforma</a></li>
                 <li><a href="#"><img src="images/icons/icon_24.png" alt="Icon" class="icon">Sonic</a></li>
-                <!-- Add more categories as needed -->
             </ul>
-        </aside> <!-- /.sidebar -->
+        </aside>
 
-        <!-- Main Content Area -->
         <main class="content-area">
-            <!-- Featured Games Section -->
             <section class="featured-games">
                 <div class="section-header">
                     <h2>Jogos em Destaque</h2>
@@ -113,7 +93,6 @@
                 </div>
 
                 <div class="game-display">
-                    <!-- Main Featured Game -->
                     <div class="main-featured-game">
                         <div class="game-image large">Baja Motocross Image</div>
                         <div class="game-info">
@@ -122,7 +101,6 @@
                             <div class="category-link"><a href="#">Jogos de Motos</a></div>
                         </div>
                     </div>
-                    <!-- Secondary Featured Games -->
                     <div class="secondary-featured-games">
                         <div class="small-featured-game">
                             <div class="game-image small">Sports Heads Ftball Img</div>
@@ -132,35 +110,32 @@
                                 <div class="category-link"><a href="#">Jogos de Futebol Online</a></div>
                             </div>
                         </div>
-                        <div class="small-featured-game tooltip-trigger"> <!-- Added tooltip trigger -->
+                        <div class="small-featured-game tooltip-trigger">
                             <div class="game-image small">E. Echoes Img</div>
                             <div class="game-info">
-                                 <!-- Placeholder for cut-off title -->
                                  <h3 style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"><a href="#">Sports Heads Football E...</a></h3>
-                                 <span class="tooltip-text">Sports Heads Football Echoes - A...</span> <!-- Tooltip content -->
+                                 <span class="tooltip-text">Sports Heads Football Echoes - A...</span>
                                 <p>Elimine alienígenas híbridos</p>
                             </div>
                         </div>
                     </div>
                 </div>
-                 <!-- Row 2 of Featured (Simulated based on layout) -->
-                 <div class="game-display" style="margin-top: -5px;"> <!-- Adjusted margin based on screenshot -->
-                    <div class="main-featured-game" style="flex: 0 0 auto; width: 250px; margin-right: 15px;"> <!-- Adjust width -->
+                 <div class="game-display" style="margin-top: -5px;">
+                    <div class="main-featured-game" style="flex: 0 0 auto; width: 250px; margin-right: 15px;">
                         <div class="game-image small">Arms Dealer Img</div>
                         <div class="game-info">
                             <h3><a href="#">Arms Dealer</a></h3>
                             <p>O perigoso mercado de armas</p>
                         </div>
                     </div>
-                     <div class="main-featured-game" style="flex: 0 0 auto; width: 250px; margin-right: 15px;"> <!-- Adjust width -->
+                     <div class="main-featured-game" style="flex: 0 0 auto; width: 250px; margin-right: 15px;">
                         <div class="game-image small">Epic Rail Img</div>
                         <div class="game-info">
                             <h3><a href="#">Epic Rail</a></h3>
                             <p>Controle a direção dos trens</p>
                         </div>
                     </div>
-                    <!-- Dora is further right, might need different flex basis or structure -->
-                     <div class="secondary-featured-games" style="width: auto; flex: 1;"> <!-- Adjust width -->
+                     <div class="secondary-featured-games" style="width: auto; flex: 1;">
                         <div class="small-featured-game">
                             <div class="game-image small">Dora's Bike Img</div>
                              <div class="game-info">
@@ -180,15 +155,13 @@
                         <span class="dot" data-index="2"></span>
                         <span class="dot" data-index="3"></span>
                         <span class="dot" data-index="4"></span>
-                         <!-- Add more dots if needed -->
                     </div>
                     <button id="nextBtn">próxima ▶</button>
                 </div>
-            </section> <!-- /.featured-games -->
+            </section>
 
-            <!-- Newest Games Section -->
             <section class="newest-games">
-                 <div class="section-header" style="margin-top: 25px;"> <!-- Add space -->
+                 <div class="section-header" style="margin-top: 25px;">
                     <h2>Jogos Online Mais Novos</h2>
                     <a href="#" class="more-link"><span class="plus-icon">+</span>Mais Jogos Novos</a>
                 </div>
@@ -214,7 +187,6 @@
                              <p>Passeie de bicicleta com Dora</p>
                          </div>
                     </div>
-                    <!-- Placeholder for the 4th item in the row -->
                     <div class="game-item">
                          <div class="game-image medium">Game Img</div>
                          <div class="game-info">
@@ -243,7 +215,6 @@
                              <p>Description...</p>
                          </div>
                     </div>
-                     <!-- Placeholder for the 8th item in the row -->
                     <div class="game-item">
                          <div class="game-image medium">Game Img</div>
                          <div class="game-info">
@@ -252,19 +223,17 @@
                          </div>
                     </div>
                 </div>
-            </section> <!-- /.newest-games -->
+            </section>
 
-            <!-- Top Games Section -->
             <section class="top-games">
                  <div class="section-header">
                     <h2>Top Jogos</h2>
-                    <div style="display: flex; align-items: center;"> <!-- Grouping right side -->
+                    <div style="display: flex; align-items: center;">
                          <a href="#" class="more-link" style="margin-right: 10px; color: #d95c00;">Top Jogos</a>
                          <a href="#" class="more-link"><span class="plus-icon">+</span>Todos</a>
                      </div>
                 </div>
                 <div class="game-grid">
-                     <!-- Example Top Game Icons -->
                     <div class="game-item"><div class="game-image icon-only">Icon 1</div></div>
                     <div class="game-item"><div class="game-image icon-only">Icon 2</div></div>
                     <div class="game-item"><div class="game-image icon-only">Icon 3</div></div>
@@ -273,17 +242,14 @@
                     <div class="game-item"><div class="game-image icon-only">Icon 6</div></div>
                     <div class="game-item"><div class="game-image icon-only">Icon 7</div></div>
                     <div class="game-item"><div class="game-image icon-only">Icon 8</div></div>
-                     <!-- Add more icon placeholders as needed -->
                 </div>
-            </section> <!-- /.top-games -->
+            </section>
 
-        </main> <!-- /.content-area -->
-    </div> <!-- /.main-content -->
-    <!-- End Main Content Section -->
+        </main>
+    </div>
 
-</div> <!-- /#site-wrapper -->
+</div>
 
-<!-- Link to external JavaScript file -->
 <script src="js/script.js"></script>
 
 </body>
